Fix: Remove flickering when closing product details

--- a/css/style.scss
+++ b/css/style.scss
@@ -118,19 +118,21 @@ header {
     div {
         width: 18.5vw;
         aspect-ratio: 4 / 5;
+        will-change: transform;
+        transition: transform 300ms ease-in-out;
     }
 
     img {
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         will-change: transform;
-        transition: transform .3s ease-in-out;
+        transition: transform 300ms ease-in-out;
+    }
 
-        &:hover {
-            transform: scale(1.05);
-        }
+    :hover {
+        transform: scale(1.05);
     }
 }
 
@@ -153,7 +155,7 @@ header {
     &_thumb {
         position: relative;
         z-index: 3;
-        width: 22vw;
+        width: 22.5vw;
         margin: 0 auto;
         aspect-ratio: 4 / 5;
         will-change: transform;
